--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
+# Python
+__pycache__/
+*.pyc
+.venv/
+.env
+
+# Brainrender/Allen Atlas Cache (Important!)
+.brainrender/
+*.vtp
+*.stl
+*.obj
+
 brain_plot.html
